// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/QuestionnairesPage should not render table whilst data is loading 1`] = `
<BaseLayout
  docTitle="Your Questionnaires"
  title="Your Questionnaires"
>
  <MainCanvas>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <Button
        data-test="create-questionnaire"
        onClick={[Function]}
        primary={true}
        type="button"
        variant="primary"
      >
        Create
      </Button>
      <QuestionnaireSettingsModal
        confirmText="Create"
        isOpen={false}
        onClose={[Function]}
        onSubmit={[Function]}
        questionnaire={
          Object {
            "description": "",
            "legalBasis": "StatisticsOfTradeAct",
            "navigation": false,
            "surveyId": "",
            "theme": "default",
            "title": "",
          }
        }
      />
    </QuestionnairesPage__StyledButtonGroup>
    <QuestionnairesPage__StyledCenteredPanel />
  </MainCanvas>
</BaseLayout>
`;

exports[`containers/QuestionnairesPage should render table when there are questionnaires 1`] = `
<BaseLayout
  docTitle="Your Questionnaires"
  title="Your Questionnaires"
>
  <MainCanvas>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <Button
        data-test="create-questionnaire"
        onClick={[Function]}
        primary={true}
        type="button"
        variant="primary"
      >
        Create
      </Button>
      <QuestionnaireSettingsModal
        confirmText="Create"
        isOpen={false}
        onClose={[Function]}
        onSubmit={[Function]}
        questionnaire={
          Object {
            "description": "",
            "legalBasis": "StatisticsOfTradeAct",
            "navigation": false,
            "surveyId": "",
            "theme": "default",
            "title": "",
          }
        }
      />
    </QuestionnairesPage__StyledButtonGroup>
    <QuestionnairesPage__StyledCenteredPanel>
      <QuestionnairesTable
        onDeleteQuestionnaire={[Function]}
        questionnaires={
          Array [
            Object {
              "createdAt": "01/01/1970",
              "createdBy": Object {
                "name": "Mike",
              },
              "id": "1",
              "sections": Array [
                Object {
                  "id": "5",
                  "pages": Array [
                    Object {
                      "id": "10",
                    },
                  ],
                },
              ],
              "title": "Test questionnaire",
            },
          ]
        }
      />
    </QuestionnairesPage__StyledCenteredPanel>
  </MainCanvas>
</BaseLayout>
`;

exports[`containers/QuestionnairesPage should render when there are no questionnaires 1`] = `
<BaseLayout
  docTitle="Your Questionnaires"
  title="Your Questionnaires"
>
  <MainCanvas>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <Button
        data-test="create-questionnaire"
        onClick={[Function]}
        primary={true}
        type="button"
        variant="primary"
      >
        Create
      </Button>
      <QuestionnaireSettingsModal
        confirmText="Create"
        isOpen={false}
        onClose={[Function]}
        onSubmit={[Function]}
        questionnaire={
          Object {
            "description": "",
            "legalBasis": "StatisticsOfTradeAct",
            "navigation": false,
            "surveyId": "",
            "theme": "default",
            "title": "",
          }
        }
      />
    </QuestionnairesPage__StyledButtonGroup>
    <QuestionnairesPage__StyledCenteredPanel>
      <QuestionnairesTable
        onDeleteQuestionnaire={[Function]}
        questionnaires={Array []}
      />
    </QuestionnairesPage__StyledCenteredPanel>
  </MainCanvas>
</BaseLayout>
`;
